--- a/Problem-3/index.html
+++ b/Problem-3/index.html
@@ -1,1 +1,170 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Form Validator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 50px;
+        }
+        form {
+            max-width: 400px;
+            margin: auto;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input:focus {
+            outline: none;
+        }
+        .valid {
+            border-color: green;
+        }
+        .invalid {
+            border-color: red;
+        }
+        .error {
+            color: red;
+            font-size: 12px;
+            display: none;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+    </style>
+</head>
+<body>
+    <form id="form">
+        <input type="text" id="name" placeholder="Name">
+        <div class="error" id="nameError">Name must contain letters only.</div>
 
+        <input type="email" id="email" placeholder="Email">
+        <div class="error" id="emailError">Invalid email format.</div>
+
+        <input type="password" id="password" placeholder="Password">
+        <div class="error" id="passwordError">Password must be at least 8 characters, with one uppercase and one number.</div>
+
+        <input type="password" id="confirmPassword" placeholder="Confirm Password">
+        <div class="error" id="confirmPasswordError">Passwords do not match.</div>
+
+        <input type="text" id="phone" placeholder="Phone Number">
+        <div class="error" id="phoneError">Phone number must be exactly 10 digits.</div>
+
+        <input type="number" id="age" placeholder="Age">
+        <div class="error" id="ageError">Age must be greater than 18.</div>
+
+        <button type="submit" id="submitButton" disabled>Submit</button>
+    </form>
+
+    <script>
+        const form = document.getElementById('form');
+        const nameInput = document.getElementById('name');
+        const emailInput = document.getElementById('email');
+        const passwordInput = document.getElementById('password');
+        const confirmPasswordInput = document.getElementById('confirmPassword');
+        const phoneInput = document.getElementById('phone');
+        const ageInput = document.getElementById('age');
+        const submitButton = document.getElementById('submitButton');
+
+        const nameError = document.getElementById('nameError');
+        const emailError = document.getElementById('emailError');
+        const passwordError = document.getElementById('passwordError');
+        const confirmPasswordError = document.getElementById('confirmPasswordError');
+        const phoneError = document.getElementById('phoneError');
+        const ageError = document.getElementById('ageError');
+
+        const validateName = () => {
+            const name = nameInput.value;
+            const isValid = /^[A-Za-z]+$/.test(name);
+            nameInput.classList.toggle('valid', isValid);
+            nameInput.classList.toggle('invalid', !isValid);
+            nameError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validateEmail = () => {
+            const email = emailInput.value;
+            const isValid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+            emailInput.classList.toggle('valid', isValid);
+            emailInput.classList.toggle('invalid', !isValid);
+            emailError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validatePassword = () => {
+            const password = passwordInput.value;
+            const isValid = /^(?=.*[A-Z])(?=.*\d).{8,}$/.test(password);
+            passwordInput.classList.toggle('valid', isValid);
+            passwordInput.classList.toggle('invalid', !isValid);
+            passwordError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validateConfirmPassword = () => {
+            const confirmPassword = confirmPasswordInput.value;
+            const isValid = confirmPassword === passwordInput.value;
+            confirmPasswordInput.classList.toggle('valid', isValid);
+            confirmPasswordInput.classList.toggle('invalid', !isValid);
+            confirmPasswordError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validatePhone = () => {
+            const phone = phoneInput.value;
+            const isValid = /^\d{10}$/.test(phone);
+            phoneInput.classList.toggle('valid', isValid);
+            phoneInput.classList.toggle('invalid', !isValid);
+            phoneError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validateAge = () => {
+            const age = ageInput.value;
+            const isValid = age > 18;
+            ageInput.classList.toggle('valid', isValid);
+            ageInput.classList.toggle('invalid', !isValid);
+            ageError.style.display = isValid ? 'none' : 'block';
+            return isValid;
+        };
+
+        const validateForm = () => {
+            const isNameValid = validateName();
+            const isEmailValid = validateEmail();
+            const isPasswordValid = validatePassword();
+            const isConfirmPasswordValid = validateConfirmPassword();
+            const isPhoneValid = validatePhone();
+            const isAgeValid = validateAge();
+
+            submitButton.disabled = !(isNameValid && isEmailValid && isPasswordValid && isConfirmPasswordValid && isPhoneValid && isAgeValid);
+        };
+
+        nameInput.addEventListener('input', validateForm);
+        emailInput.addEventListener('input', validateForm);
+        passwordInput.addEventListener('input', validateForm);
+        confirmPasswordInput.addEventListener('input', validateForm);
+        phoneInput.addEventListener('input', validateForm);
+        ageInput.addEventListener('input', validateForm);
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            alert('Form submitted successfully!');
+        });
+    </script>
+</body>
+</html>
